@@ -53,7 +53,9 @@
 		<property name="UUID" type="s" access="read" />
 		<property name="Codec" type="y" access="read" />
 		<property name="Vendor" type="u" access="read" />
-		<property name="Capabilities" type="ay" access="read" />
+		<property name="Capabilities" type="ay" access="read">
+			<annotation name="org.gtk.GDBus.C.ForceGVariant" value="true" />
+		</property>
 		<property name="Device" type="o" access="read" />
 		<property name="DelayReporting" type="b" access="read" />
 	</interface>
