@@ -25,11 +25,11 @@
 #define MOCK_DEVICE_2 "23:45:67:89:AB:CD"
 
 #define MOCK_BLUEZ_ADAPTER_PATH "/org/bluez/hci11"
-#define MOCK_BLUEZ_DEVICE_PATH_1 MOCK_BLUEZ_ADAPTER_PATH "/dev_12_34_56_78_9A_BC"
-#define MOCK_BLUEZ_DEVICE_PATH_2 MOCK_BLUEZ_ADAPTER_PATH "/dev_23_45_67_89_AB_CD"
-#define MOCK_BLUEZ_MIDI_PATH_1 MOCK_BLUEZ_ADAPTER_PATH "/MIDI"
-#define MOCK_BLUEZ_SCO_PATH_1 MOCK_BLUEZ_DEVICE_PATH_1 "/sco"
-#define MOCK_BLUEZ_SCO_PATH_2 MOCK_BLUEZ_DEVICE_PATH_2 "/sco"
+#define MOCK_BLUEZ_DEVICE_1_PATH MOCK_BLUEZ_ADAPTER_PATH "/dev_12_34_56_78_9A_BC"
+#define MOCK_BLUEZ_DEVICE_1_SEP_PATH MOCK_BLUEZ_DEVICE_1_PATH "/sep"
+#define MOCK_BLUEZ_DEVICE_2_PATH MOCK_BLUEZ_ADAPTER_PATH "/dev_23_45_67_89_AB_CD"
+#define MOCK_BLUEZ_DEVICE_2_SEP_PATH MOCK_BLUEZ_DEVICE_2_PATH "/sep"
+#define MOCK_BLUEZ_MIDI_PATH MOCK_BLUEZ_ADAPTER_PATH "/MIDI"
 
 extern GAsyncQueue *mock_sem_ready;
 extern GAsyncQueue *mock_sem_timeout;
@@ -44,6 +44,9 @@ void mock_bluealsa_service_start(void);
 void mock_bluealsa_service_stop(void);
 
 int mock_bluez_device_name_mapping_add(const char *mapping);
+int mock_bluez_device_media_endpoint_add(const char *endpoint_path,
+		const char *device_path, const char *uuid, uint32_t codec_id,
+		const void *capabilities, size_t capabilities_size);
 int mock_bluez_device_profile_new_connection(const char *device_path,
 		const char *uuid, GAsyncQueue *sem_ready);
 int mock_bluez_device_media_set_configuration(const char *device_path,
